--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <center>
-    <h1 style="color: red;"> INDIAN PREMIER LEAGUE(IPL)</h1>
+    <h1 style="color: blue;"> INDIAN PREMIER LEAGUE(IPL)</h1>
     <image src="https://wallpapercave.com/wp/wp7104495.jpg" alt="IPL" width="20%" height="200rem"/>
     </center>
     <h2>Information about IPL:<hr/></h2>
