--- a/index.html
+++ b/index.html
@@ -254,11 +254,11 @@
         <center><header><b>Team Records</b></header></center>
     </tr>
     <tr>
-        <td>Highet total</td>
+        <td>Highet total by SRH</td>
         <td>287/3 (20) vs Royal Challengers Bengaluru (15 April 2024)</td>
     </tr>
     <tr>
-        <td>Royal Challengers Bengaluru</td>
+        <td>lowest total by RCB</td>
         <td>49 (9.4) vs Kolkata Knight Riders (23 April 2017)</td>
     </tr>
 </table><br/>
