--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <center>
     <h1 style="color: blue;"> INDIAN PREMIER LEAGUE(IPL)</h1>
-    <image src="https://wallpapercave.com/wp/wp7104495.jpg" alt="IPL" width="20%" height="200rem"/>
+    <img src="https://wallpapercave.com/wp/wp7104495.jpg" alt="IPL" width="20%" height="200rem"/>
     </center>
     <h2>Information about IPL:<hr/></h2>
     <p align="left">The Indian Premier League (IPL), also known as the TATA IPL for sponsorship reasons, is a men's Twenty20 (T20) cricket league held annually in India. Founded by the BCCI (the Board of Control for Cricket in India) in 2007, the league features ten state or city-based franchise teams.The IPL usually takes place during the summer, between March and May each year.<br/><br/>The IPL is by far the most popular cricket league in the world; in 2014, it ranked sixth in average attendance among all sports leagues. In 2010, the IPL became the first sporting event to be broadcast live on YouTube. Inspired by the success of the IPL, other Indian sports leagues have been established In 2022, the league's brand value was estimated at ₹90,038 crore (US$11 billion). According to the BCCI, the 2015 IPL season contributed ₹1,150 crore (US$140 million) to India's GDP. In December 2022, the IPL achieved a valuation of US$10.9 billion, becoming a decacorn and registering a 75% growth in dollar terms since 2020 when it was valued at $6.2 billion, according to a report by the consulting firm D and P Advisory. Its 2023 final became the most streamed live event on the internet, with 32 million viewers. there are 10 teams in ipl from 2022<a href="https://en.wikipedia.org/wiki/Indian_Premier_League">click here for more Information</a></p>
